// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Comments CommentsComponent Loaded & comments array empty render correctly CommentsComponent 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <CommentsComponent
    articleId=""
    classes={
      Object {
        "root": "",
      }
    }
    comments={Array []}
    errorMsg={null}
    isLoaded={true}
    isLoading={false}
    onClearComments={[Function]}
    onGetAllCommentsByArticleId={[Function]}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "function",
    "props": Object {
      "children": Array [
        false,
        null,
        <span
          id="comments-empty-message"
        >
          No comments yep
        </span>,
        null,
      ],
    },
    "ref": null,
    "rendered": Array [
      false,
      null,
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": "No comments yep",
          "id": "comments-empty-message",
        },
        "ref": null,
        "rendered": "No comments yep",
        "type": "span",
      },
      null,
    ],
    "type": Symbol(react.fragment),
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "children": Array [
          false,
          null,
          <span
            id="comments-empty-message"
          >
            No comments yep
          </span>,
          null,
        ],
      },
      "ref": null,
      "rendered": Array [
        false,
        null,
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "No comments yep",
            "id": "comments-empty-message",
          },
          "ref": null,
          "rendered": "No comments yep",
          "type": "span",
        },
        null,
      ],
      "type": Symbol(react.fragment),
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;

exports[`Comments CommentsComponent Will Unmount render correctly CommentsComponent 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <CommentsComponent
    articleId=""
    classes={
      Object {
        "root": "",
      }
    }
    comments={Array []}
    errorMsg={null}
    isLoaded={false}
    isLoading={false}
    onClearComments={
      [MockFunction] {
        "calls": Array [
          Array [],
        ],
        "results": Array [
          Object {
            "isThrow": false,
            "value": undefined,
          },
        ],
      }
    }
    onGetAllCommentsByArticleId={[Function]}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "function",
    "props": Object {
      "children": Array [
        false,
        null,
        null,
        null,
      ],
    },
    "ref": null,
    "rendered": Array [
      false,
      null,
      null,
      null,
    ],
    "type": Symbol(react.fragment),
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "children": Array [
          false,
          null,
          null,
          null,
        ],
      },
      "ref": null,
      "rendered": Array [
        false,
        null,
        null,
        null,
      ],
      "type": Symbol(react.fragment),
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;

exports[`Comments CommentsComponent initial render correctly CommentsComponent 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <CommentsComponent
    articleId=""
    classes={
      Object {
        "root": "",
      }
    }
    comments={Array []}
    errorMsg={null}
    isLoaded={false}
    isLoading={false}
    onClearComments={[Function]}
    onGetAllCommentsByArticleId={
      [MockFunction] {
        "calls": Array [
          Array [
            "",
          ],
        ],
        "results": Array [
          Object {
            "isThrow": false,
            "value": undefined,
          },
        ],
      }
    }
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "function",
    "props": Object {
      "children": Array [
        false,
        null,
        null,
        null,
      ],
    },
    "ref": null,
    "rendered": Array [
      false,
      null,
      null,
      null,
    ],
    "type": Symbol(react.fragment),
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "children": Array [
          false,
          null,
          null,
          null,
        ],
      },
      "ref": null,
      "rendered": Array [
        false,
        null,
        null,
        null,
      ],
      "type": Symbol(react.fragment),
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;

exports[`Comments CommentsComponent isLoading render correctly CommentsComponent 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <CommentsComponent
    articleId=""
    classes={
      Object {
        "root": "",
      }
    }
    comments={Array []}
    errorMsg={null}
    isLoaded={false}
    isLoading={true}
    onClearComments={[Function]}
    onGetAllCommentsByArticleId={[Function]}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "function",
    "props": Object {
      "children": Array [
        false,
        <WithStyles(CircularIndeterminate) />,
        null,
        null,
      ],
    },
    "ref": null,
    "rendered": Array [
      false,
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {},
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      null,
      null,
    ],
    "type": Symbol(react.fragment),
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "children": Array [
          false,
          <WithStyles(CircularIndeterminate) />,
          null,
          null,
        ],
      },
      "ref": null,
      "rendered": Array [
        false,
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {},
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        null,
        null,
      ],
      "type": Symbol(react.fragment),
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;

exports[`Comments CommentsComponent render <List /> render correctly CommentsComponent 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <CommentsComponent
    articleId=""
    classes={
      Object {
        "root": "",
      }
    }
    comments={
      Array [
        Object {
          "_id": "PropTypes.string.isRequired",
          "article_id": "PropTypes.string.isRequired",
          "author_id": "PropTypes.string.isRequired",
          "author_name": "PropTypes.string.isRequired",
          "created_at": "PropTypes.string.isRequired",
          "text": "PropTypes.string.isRequired",
          "updated_at": "PropTypes.string.isRequired",
        },
      ]
    }
    errorMsg={null}
    isLoaded={true}
    isLoading={false}
    onClearComments={[Function]}
    onGetAllCommentsByArticleId={[Function]}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "function",
    "props": Object {
      "children": Array [
        <div
          className=""
        >
          <WithStyles(List)
            dense={true}
          >
            <WithStyles(ListItem)>
              <Connect(WithStyles(Comment))
                comment={
                  Object {
                    "_id": "PropTypes.string.isRequired",
                    "article_id": "PropTypes.string.isRequired",
                    "author_id": "PropTypes.string.isRequired",
                    "author_name": "PropTypes.string.isRequired",
                    "created_at": "PropTypes.string.isRequired",
                    "text": "PropTypes.string.isRequired",
                    "updated_at": "PropTypes.string.isRequired",
                  }
                }
              />
            </WithStyles(ListItem)>
          </WithStyles(List)>
        </div>,
        null,
        null,
        null,
      ],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <WithStyles(List)
            dense={true}
          >
            <WithStyles(ListItem)>
              <Connect(WithStyles(Comment))
                comment={
                  Object {
                    "_id": "PropTypes.string.isRequired",
                    "article_id": "PropTypes.string.isRequired",
                    "author_id": "PropTypes.string.isRequired",
                    "author_name": "PropTypes.string.isRequired",
                    "created_at": "PropTypes.string.isRequired",
                    "text": "PropTypes.string.isRequired",
                    "updated_at": "PropTypes.string.isRequired",
                  }
                }
              />
            </WithStyles(ListItem)>
          </WithStyles(List)>,
          "className": "",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": Array [
              <WithStyles(ListItem)>
                <Connect(WithStyles(Comment))
                  comment={
                    Object {
                      "_id": "PropTypes.string.isRequired",
                      "article_id": "PropTypes.string.isRequired",
                      "author_id": "PropTypes.string.isRequired",
                      "author_name": "PropTypes.string.isRequired",
                      "created_at": "PropTypes.string.isRequired",
                      "text": "PropTypes.string.isRequired",
                      "updated_at": "PropTypes.string.isRequired",
                    }
                  }
                />
              </WithStyles(ListItem)>,
            ],
            "dense": true,
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": "PropTypes.string.isRequired",
              "nodeType": "class",
              "props": Object {
                "children": <Connect(WithStyles(Comment))
                  comment={
                    Object {
                      "_id": "PropTypes.string.isRequired",
                      "article_id": "PropTypes.string.isRequired",
                      "author_id": "PropTypes.string.isRequired",
                      "author_name": "PropTypes.string.isRequired",
                      "created_at": "PropTypes.string.isRequired",
                      "text": "PropTypes.string.isRequired",
                      "updated_at": "PropTypes.string.isRequired",
                    }
                  }
                />,
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "comment": Object {
                    "_id": "PropTypes.string.isRequired",
                    "article_id": "PropTypes.string.isRequired",
                    "author_id": "PropTypes.string.isRequired",
                    "author_name": "PropTypes.string.isRequired",
                    "created_at": "PropTypes.string.isRequired",
                    "text": "PropTypes.string.isRequired",
                    "updated_at": "PropTypes.string.isRequired",
                  },
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
              "type": [Function],
            },
          ],
          "type": [Function],
        },
        "type": "div",
      },
      null,
      null,
      null,
    ],
    "type": Symbol(react.fragment),
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "children": Array [
          <div
            className=""
          >
            <WithStyles(List)
              dense={true}
            >
              <WithStyles(ListItem)>
                <Connect(WithStyles(Comment))
                  comment={
                    Object {
                      "_id": "PropTypes.string.isRequired",
                      "article_id": "PropTypes.string.isRequired",
                      "author_id": "PropTypes.string.isRequired",
                      "author_name": "PropTypes.string.isRequired",
                      "created_at": "PropTypes.string.isRequired",
                      "text": "PropTypes.string.isRequired",
                      "updated_at": "PropTypes.string.isRequired",
                    }
                  }
                />
              </WithStyles(ListItem)>
            </WithStyles(List)>
          </div>,
          null,
          null,
          null,
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <WithStyles(List)
              dense={true}
            >
              <WithStyles(ListItem)>
                <Connect(WithStyles(Comment))
                  comment={
                    Object {
                      "_id": "PropTypes.string.isRequired",
                      "article_id": "PropTypes.string.isRequired",
                      "author_id": "PropTypes.string.isRequired",
                      "author_name": "PropTypes.string.isRequired",
                      "created_at": "PropTypes.string.isRequired",
                      "text": "PropTypes.string.isRequired",
                      "updated_at": "PropTypes.string.isRequired",
                    }
                  }
                />
              </WithStyles(ListItem)>
            </WithStyles(List)>,
            "className": "",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": Array [
                <WithStyles(ListItem)>
                  <Connect(WithStyles(Comment))
                    comment={
                      Object {
                        "_id": "PropTypes.string.isRequired",
                        "article_id": "PropTypes.string.isRequired",
                        "author_id": "PropTypes.string.isRequired",
                        "author_name": "PropTypes.string.isRequired",
                        "created_at": "PropTypes.string.isRequired",
                        "text": "PropTypes.string.isRequired",
                        "updated_at": "PropTypes.string.isRequired",
                      }
                    }
                  />
                </WithStyles(ListItem)>,
              ],
              "dense": true,
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": "PropTypes.string.isRequired",
                "nodeType": "class",
                "props": Object {
                  "children": <Connect(WithStyles(Comment))
                    comment={
                      Object {
                        "_id": "PropTypes.string.isRequired",
                        "article_id": "PropTypes.string.isRequired",
                        "author_id": "PropTypes.string.isRequired",
                        "author_name": "PropTypes.string.isRequired",
                        "created_at": "PropTypes.string.isRequired",
                        "text": "PropTypes.string.isRequired",
                        "updated_at": "PropTypes.string.isRequired",
                      }
                    }
                  />,
                },
                "ref": null,
                "rendered": Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {
                    "comment": Object {
                      "_id": "PropTypes.string.isRequired",
                      "article_id": "PropTypes.string.isRequired",
                      "author_id": "PropTypes.string.isRequired",
                      "author_name": "PropTypes.string.isRequired",
                      "created_at": "PropTypes.string.isRequired",
                      "text": "PropTypes.string.isRequired",
                      "updated_at": "PropTypes.string.isRequired",
                    },
                  },
                  "ref": null,
                  "rendered": null,
                  "type": [Function],
                },
                "type": [Function],
              },
            ],
            "type": [Function],
          },
          "type": "div",
        },
        null,
        null,
        null,
      ],
      "type": Symbol(react.fragment),
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;

exports[`Comments CommentsComponent with errorMsg render correctly CommentsComponent 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <CommentsComponent
    articleId=""
    classes={
      Object {
        "root": "",
      }
    }
    comments={Array []}
    errorMsg="Something going wrong"
    isLoaded={false}
    isLoading={false}
    onClearComments={[Function]}
    onGetAllCommentsByArticleId={[Function]}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "function",
    "props": Object {
      "children": Array [
        false,
        null,
        null,
        <span
          id="comments-error-message"
        >
          Something going wrong
        </span>,
      ],
    },
    "ref": null,
    "rendered": Array [
      false,
      null,
      null,
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": "Something going wrong",
          "id": "comments-error-message",
        },
        "ref": null,
        "rendered": "Something going wrong",
        "type": "span",
      },
    ],
    "type": Symbol(react.fragment),
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "children": Array [
          false,
          null,
          null,
          <span
            id="comments-error-message"
          >
            Something going wrong
          </span>,
        ],
      },
      "ref": null,
      "rendered": Array [
        false,
        null,
        null,
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "Something going wrong",
            "id": "comments-error-message",
          },
          "ref": null,
          "rendered": "Something going wrong",
          "type": "span",
        },
      ],
      "type": Symbol(react.fragment),
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;
